Add support for querying Sui Balances
