# plugin/app/api/get-balance/route.ts
@@ -1,0 +1,38 @@
+import { NextResponse } from "next/server";
+import { Todos } from "../../../lib/TodosClass";
+
+export async function GET() {
+  console.log("GETTING COINS: " + Todos.getTodos());
+  return NextResponse.json(
+    {
+      balance: await Todos.getBalance(),
+    },
+    {
+      status: 200,
+      headers: {
+        // "Access-Control-Allow-Origin": "https://chat.openai.com",
+        "Access-Control-Allow-Origin": "http://localhost:3010",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers":
+          "Content-Type, Authorization, openai-ephemeral-user-id, openai-conversation-id",
+      },
+    }
+  );
+}
+
+export async function OPTIONS() {
+  return NextResponse.json(
+    {},
+    {
+      status: 200,
+      headers: {
+        // "Access-Control-Allow-Origin": "https://chat.openai.com",
+        // "Access-Control-Allow-Origin": "http://0.0.0.0:3010/chat",
+        "Access-Control-Allow-Origin": "http://localhost:3010",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers":
+          "Content-Type, Authorization, openai-ephemeral-user-id, openai-conversation-id",
+      },
+    }
+  );
+}
